--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "mockjs": "^1.0.1-beta3",
     "umi": "^2.6.1",
     "umi-plugin-react": "^1.6.0"
   },
